--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
 
-<script type="text/javascript" src="{{asset('../js/excercise.js')}}"></script>
+<script type="text/javascript" src="{{asset('../js/challenges.js')}}"></script>
 
 {% endblock %}
 
