start project simple game

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -5,7 +5,8 @@
 {% block body %}
 
 
-<script type="text/javascript" src="{{asset('../js/challenges.js')}}"></script>
 
+        
+        <script type="text/javascript" src="{{asset('../js/pig_game.js')}}"></script>
 {% endblock %}
 
