--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,12 +1,35 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}!{% endblock %}
-
-{% block body %}
-
-
-
-        
-        <script type="text/javascript" src="{{asset('../js/pig_game.js')}}"></script>
+{% block title %}
+	!
 {% endblock %}
 
+{% block body %}
+	<div class="container">
+		<div class="PLayers">
+			<div class="player-0">Player 1</div>
+			<div class="player-1">Player 2</div>
+		</div>
+		<div class="scores">
+			<div class="total-player-0">0</div>
+			<div class="total-player-1">0</div>
+			<div class="current-player-0">
+				<label>current</label>10</div>
+			<div class="current-player-1">
+				<label>current</label>20</div>
+		</div>
+		<div class="buttons">
+			<div class="btn-new-game">
+				<button type="button">New game</button>
+			</div>
+			<div class="btn-roll-dice">
+				<button type="button">Roll dice</button>
+				<div class="btn-hold">
+					<button type="button">Hold</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<script type="text/javascript" src="{{ asset('../js/pig_game.js') }}"></script>
+{% endblock %}
