--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -6,30 +6,32 @@
 
 {% block body %}
 	<div class="container">
-		<div class="PLayers">
-			<div class="player-0">Player 1</div>
-			<div class="player-1">Player 2</div>
-		</div>
-		<div class="scores">
-			<div class="total-player-0">0</div>
-			<div class="total-player-1">0</div>
-			<div class="current-player-0">
-				<label>current</label>10</div>
-			<div class="current-player-1">
-				<label>current</label>20</div>
-		</div>
-		<div class="buttons">
-			<div class="btn-new-game">
-				<button type="button">New game</button>
+		<div class="players">
+			<div class="player-0">
+				<div class="player-zero">Player 1</div>
+				<div class="total-player-zero">0</div>
+				<div class="current-player-zero">
+					<label>current
+					</label>10</div>
 			</div>
-			<div class="btn-roll-dice">
-				<button type="button">Roll dice</button>
-				<div class="btn-hold">
-					<button type="button">Hold</button>
-				</div>
+			<div class="player-1">
+				<div class="player-one">Player 2</div>
+				<div class="total-player-one">0</div>
+				<div class="current-player-one">
+					<label>current
+					</label>20</div>
 			</div>
 		</div>
 	</div>
-
-	<script type="text/javascript" src="{{ asset('../js/pig_game.js') }}"></script>
-{% endblock %}
+	<div class="buttons">
+		<div class="btn-new-game">
+			<button type="button">New game</button>
+		</div>
+		<div class="btn-roll-dice">
+			<button type="button">Roll dice</button>
+		</div>
+		<div class="btn-hold">
+			<button type="button">Hold</button>
+		</div>
+	</div>
+</div></div><script type="text/javascript" src="{{ asset('../js/pig_game.js') }}"></script>{% endblock %}
