--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -8,14 +8,14 @@
 	<div class="container">
 		<div class="players">
 			<div class="player-0">
-				<div class="player-zero">Player 1</div>
+				<div class="player-zero"><strong>Player 1</strong></div>
 				<div class="total-player-zero">0</div>
 				<div class="current-player-zero">
 					<label>current
 					</label>10</div>
 			</div>
 			<div class="player-1">
-				<div class="player-one">Player 2</div>
+				<div class="player-one"><strong>Player 2</strong></div>
 				<div class="total-player-one">0</div>
 				<div class="current-player-one">
 					<label>current
