created current scores to display

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -10,16 +10,14 @@
 			<div class="player-0">
 				<div class="player-zero"><strong>Player 1</strong></div>
 				<div class="total-player-zero">0</div>
-				<div class="current-player-zero">
-					<label>current
-					</label>10</div>
+				<div class="current-player-zero-label"><label>current</label></div>
+				<div class="current-player-zero-score" id="current-0">10</div>
 			</div>
 			<div class="player-1">
 				<div class="player-one"><strong>Player 2</strong></div>
 				<div class="total-player-one">0</div>
-				<div class="current-player-one">
-					<label>current
-					</label>20</div>
+				<div class="current-player-one-label"><label>current</label></div>
+				<div class="current-player-one-score" id="current-1">10</div>
 			</div>
 		</div>
 	</div>
