--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -5,11 +5,11 @@ body{
     position: absolute;
     display: flex;
     font-size: 20px;
-    top: 50%;
+    top: 30%;
 
 }
 .players > div {
-    width: 40rem;
+    width: 45rem;
     text-align: center;
     
 }
@@ -19,4 +19,9 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
 }
-
+img{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
