--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,27 +1,55 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
-    background-image: linear-gradient(45deg, red, blue);
+    background-color: darkslategrey;
 }
-.players{
-    position: absolute;
-    display: flex;
-    font-size: 20px;
-    top: 30%;
-
+.player-0 {
+   float: left;
+   width: 150px;
+   height: 150px;
+   margin-left: 25%;
+   margin-top: 12%;
+   background-color: white;
 }
-.players > div {
-    width: 45rem;
+.player-1{
+    float: right;
+    margin-right: 25%;
+    margin-top: 12%;
+    width: 150px;
+    height: 150px;
+    background-color: white;
+}
+.player-name, .current-scores, .total-scores{
     text-align: center;
-    
+    margin-top: 20px;
+    font-size: 20px;
+    font-weight: bold;
 }
 .buttons{
     position: absolute;
-    top: 70%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    width: 100px;
+    height: 50px;
+    flex-direction: column;
+    justify-content: space-between;
+    transform: translate(-50%);
 }
-img{
+.buttons > button{
+    font-size: 20px;
+}
+.btn-new-game{margin-top: 100px; }
+.btn-roll-dice{margin-top: 400px;}
+.btn-hold{margin-top: 10px;}
+
+.dice {
     position: absolute;
-    top: 40%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    top: 178px;
+    transform: translateX(-50%);
+    height: 150px;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
