change view continuing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,27 +6,52 @@
 body{
     background-color: darkslategrey;
 }
+.container{
+    width: 1000px;
+    height: 600px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: linear-gradient(to right, lightgray 50%, white 50%);
+}
 .player-0 {
    float: left;
    width: 150px;
    height: 150px;
-   margin-left: 25%;
+   margin-left: 15%;
    margin-top: 12%;
-   background-color: white;
+   background-color: lightgray;
 }
 .player-1{
     float: right;
-    margin-right: 25%;
+    margin-right: 15%;
     margin-top: 12%;
     width: 150px;
     height: 150px;
     background-color: white;
 }
-.player-name, .current-scores, .total-scores{
+.player-name, .current-scores{
     text-align: center;
     margin-top: 20px;
-    font-size: 20px;
+    font-size: 30px;
     font-weight: bold;
+}
+.card-total-scores{
+    background-color: darkred;
+    color: #fff;
+    width: 80%;
+    margin-top: 200px;
+    transform: translate(30%);
+    padding: 12px;
+    text-align: center;
+}
+.total-scores{
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    color: #222;
+    padding: 10px;
+    font-size: 30px;
 }
 .buttons{
     position: absolute;
@@ -42,7 +67,7 @@ body{
     font-size: 20px;
 }
 .btn-new-game{margin-top: 100px; }
-.btn-roll-dice{margin-top: 400px;}
+.btn-roll-dice{margin-top: 350px;}
 .btn-hold{margin-top: 10px;}
 
 .dice {
