--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -6,17 +6,21 @@
 	<div class="container">
 		<div class="player-0">
 			<div class="player-name">Player 1</div>
-			<div class="current-scores">0</div>
-			<div class="total-scores">20</div>
-		</div> 
+			<div class="current-scores" id="current-scores-0">0</div>
+			<div class="card-total-scores">Total scores 
+				<div class="total-scores">20</div>
+			</div>
+		</div>
 
 		<div class="player-1">
 			<div class="player-name">Player 2</div>
-			<div class="current-scores">0</div>
-			<div class="total-scores">25</div>
+			<div class="current-scores" id="current-scores-1">0</div>
+			<div class="card-total-scores">Total scores 
+				<div class="total-scores">25</div>
+			</div>
 		</div>
 
-		<img src="{{ asset('../img/dice-3.png')}}" alt="Dice" class="dice">
+		<img src="../img/dice-3.png" alt="Dice" class="dice">
 
 		<div class="buttons">
 			<button class="btn-new-game">New game</button>
@@ -24,6 +28,6 @@
 			<button class="btn-hold">Hold</button>
 		</div>
 
+	</div>
 		<script type="text/javascript" src="{{ asset('../js/pig_game.js') }}"></script>
-
-	{% endblock %}
+{% endblock %}
