scores are counted

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -8,7 +8,7 @@
 			<div class="player-name">Player 1</div>
 			<div class="current-scores" id="current-scores-0">0</div>
 			<div class="card-total-scores">Total scores 
-				<div class="total-scores">20</div>
+				<div class="total-scores"  id="total-scores-0">20</div>
 			</div>
 		</div>
 
@@ -16,7 +16,7 @@
 			<div class="player-name">Player 2</div>
 			<div class="current-scores" id="current-scores-1">0</div>
 			<div class="card-total-scores">Total scores 
-				<div class="total-scores">25</div>
+				<div class="total-scores" id="total-scores-1">25</div>
 			</div>
 		</div>
 
