--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -7,27 +7,27 @@
 		<div class="player-0">
 			<div class="player-name">Player 1</div>
 			<div class="current-scores" id="current-scores-0">0</div>
-			<div class="card-total-scores">Total scores 
-				<div class="total-scores"  id="total-scores-0">20</div>
+			<div class="card-total-scores">Total scores
+				<div class="total-scores" id="total-scores-0">0</div>
 			</div>
 		</div>
 
 		<div class="player-1">
 			<div class="player-name">Player 2</div>
 			<div class="current-scores" id="current-scores-1">0</div>
-			<div class="card-total-scores">Total scores 
-				<div class="total-scores" id="total-scores-1">25</div>
+			<div class="card-total-scores">Total scores
+				<div class="total-scores" id="total-scores-1">0</div>
 			</div>
 		</div>
 
 		<img src="../img/dice-3.png" alt="Dice" class="dice">
 
 		<div class="buttons">
-			<button class="btn-new-game">New game</button>
+			<button class="btn-new-game" id="new">New game</button>
 			<button class="btn-roll-dice">Roll dice</button>
 			<button class="btn-hold">Hold</button>
 		</div>
 
 	</div>
-		<script type="text/javascript" src="{{ asset('../js/pig_game.js') }}"></script>
+	<script type="text/javascript" src="{{ asset('../js/pig_game.js') }}"></script>
 {% endblock %}
