--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -36,7 +36,8 @@ body {
     background-color: white;
 }
 
-.player-name,
+.player-name-0,
+.player-name-1,
 .current-scores {
     text-align: center;
     margin-top: 20px;
@@ -60,6 +61,11 @@ body {
     color: #222;
     padding: 10px;
     font-size: 30px;
+}
+
+.winner {
+    color: darkred;
+    font-size: 35px;
 }
 
 .buttons {
