--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -4,8 +4,9 @@
 
 {% block body %}
 	<div class="container">
+		<form onsubmit="getValue()"><input type="text" id="number"/><input type="submit" value="Submit" ></form>
 		<div class="player-0">
-			<div class="player-name">Player 1</div>
+			<div class="player-name-0">Player 1</div>
 			<div class="current-scores" id="current-scores-0">0</div>
 			<div class="card-total-scores">Total scores
 				<div class="total-scores" id="total-scores-0">0</div>
@@ -13,7 +14,7 @@
 		</div>
 
 		<div class="player-1">
-			<div class="player-name">Player 2</div>
+			<div class="player-name-1">Player 2</div>
 			<div class="current-scores" id="current-scores-1">0</div>
 			<div class="card-total-scores">Total scores
 				<div class="total-scores" id="total-scores-1">0</div>
