added second dice

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 	<div class="container">
-		<form onsubmit="getValue()"><input type="text" id="number"/><input type="submit" value="Submit" ></form>
+		<form onsubmit="getValue()"><input type="text" id="number"/><input type="submit" value="Submit"></form>
 		<div class="player-0">
 			<div class="player-name-0">Player 1</div>
 			<div class="current-scores" id="current-scores-0">0</div>
@@ -22,7 +22,7 @@
 		</div>
 
 		<img src="../img/dice-3.png" alt="Dice" class="dice">
-
+		<img src="../img/dice2-3.png" alt="Dice" class="dice2">
 		<div class="buttons">
 			<button class="btn-new-game" id="new">New game</button>
 			<button class="btn-roll-dice">Roll dice</button>
