--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -103,3 +103,12 @@ body {
     height: 150px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
+
+.dice2 {
+    position: absolute;
+    left: 50%;
+    top: 340px;
+    transform: translateX(-50%);
+    height: 150px;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+}
